--- a/src/app/components/thumbnails-view/thumbnails-view.component.html
+++ b/src/app/components/thumbnails-view/thumbnails-view.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <mat-grid-list cols="4">
       <mat-grid-tile *ngFor="let photo of photos; let i=index" (deferLoad)="photo.show=true"> 
-        <mat-card *ngIf="photo.show | async">
+        <mat-card *ngIf="photo.show">
           <img  [class]="expression"mat-card-content src={{photo.thumbnailUrl}} alt="No image" (click)="click(i)"/> 
         </mat-card>
       </mat-grid-tile>
