--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,2 @@
-<div class="fxFlex">
-    <mat-toolbar color ="primary">
-        <span>Photo Browser</span>
-        <div fxLayout="row" fxLayoutAlign="end">
-            <div fxLayout="row" fxLayoutAlign="end">
-                <a [routerLink]="['/home']" routerLinkActive="router-link-active"  mat-button fxFlex="auto">Home</a>
-                <a [routerLink]="['/albums']" routerLinkActive="router-link-active"  mat-button fxFlex="auto">Albums</a>
-                <a [routerLink]="['/users']" routerLinkActive="router-link-active"  mat-button fxFlex="auto">Users</a>
-            </div>
-        </div>
-    </mat-toolbar>
-    </div>
+<app-toolbar [title]="title"></app-toolbar>
 <router-outlet></router-outlet>
