--- a/src/app/components/photo/photo.component.html
+++ b/src/app/components/photo/photo.component.html
@@ -1,11 +1,13 @@
-<div class="button-bar">
-  <button mat-raised-button color="primary" (click)="goBack()">Back</button>
-</div>
-<div class="container">
-  <mat-card *ngIf="photo">
-    <mat-card-header>
-      <mat-card-title>{{photo.title}}</mat-card-title>
-    </mat-card-header>
-    <img mat-card-image [class]="expression" src={{photo.url}} /> 
-   </mat-card>
+<div>
+  <div class="button-bar">
+    <button mat-raised-button color="primary" (click)="goBack()">Back</button>
+  </div>
+  <div class="container">
+    <mat-card *ngIf="photo">
+      <mat-card-header>
+        <mat-card-title>{{photo.title}}</mat-card-title>
+      </mat-card-header>
+      <img mat-card-image [class]="expression" src={{photo.url}} /> 
+    </mat-card>
+  </div>
 </div>
